feat: release 3.1.0 - merge develop into master (大版本功能更新与架构优化) (#6)
* feat: 添加单独的视频投屏接口

* feat: 网络工具插件前端资源更新-支持选择设备投屏

* fix: 完善视频转码的ffmpeg流类型; 修复转码任务无权限读取原文件的问题

* feat: ffmpeg视频转码支持更多参数

新增以下参数:
- 目标封装格式
- crf
- tune
- preset
- 是否覆盖同名文件

* perf: 视频转码后的目标保存位置为网盘的主文件系统时，使用

* feat: 视频字幕提取支持ass和sup格式

* perf: 字幕提取添加并发控制，并修复同一个视频提取不同的字幕流，只能一直获取到第一次提取到的缓存的问题

* feat: 更新视频插件的前端资源

* feat: 通过ffmpeg提取字幕时明确指定编码器和格式

* feat: 更新视频增强插件前端资源

* feat: 调整视频转码任务进度更新机制，最后一个步骤把文件存储算上

* fix: 修复系统中存在多个待处理的后台任务时，任务消费失败的问题

* fix: 修复直接文件到未创建的目录下时，途径文件夹没能自动创建的问题

* fix: 修复getAndMkdirs对同一个uid和path并发调用时的唯一索引冲突问题

* feat: 视频功能增强插件更新前端资源，支持批量创建视频转码任务

* fix: 修复在公共网盘创建完视频转码任务后，打开的任务列表看不到刚刚创建的任务的问题

* chore: 使用libass-wasm库替代assjs作为ass字幕渲染库，并内置思源黑体作为默认字体

* feat: FileUtils支持定义自定义拓展类型的contentType

* fix: 修复视频插件的libass-wasm无法加载wasm模块的问题，该库不随vite打包，单独通过URL引入

* feat: 提高ass字幕播放帧率以支持一些动效获得更好的体验; 处理视频播放中的时候，再打开ass字幕，ass字幕的渲染帧率只有1FPS的问题

* fix: 提交错文件了

原提交: feat: 提高ass字幕播放帧率以支持一些动效获得更好的体验; 处理视频播放中的时候，再打开ass字幕，ass字幕的渲染帧率只有1FPS的问题

* fix: 修复缓存注解中的key表达式无法读取变量的问题。

调整maven编译参数，补充-parameters

原提交: feat: 提高ass字幕播放帧率以支持一些动效获得更好的体验; 处理视频播放中的时候，再打开ass字幕，ass字幕的渲染帧率只有1FPS的问题

* feat: 新增WebRTC应用插件

* feat: WebRTC应用插件补充前端资源

* refactor: 移除未使用的导入，处理一些警告，替换部分被弃用的方法

* feat: 初步实现WebDAV服务插件

* fix: 修复WebDAV授权逻辑错误

* chore: 排除WebDAV模块的部分重复依赖

* fix: 修复WebDAV无法在公共网盘/私人网盘的根目录下操作文件的问题，完善虚拟目录的操作识别和操作拒绝

* perf: WebDAV认证信息数据表补充索引，调整摘要字段长度为固定的32

* refactor: “视频转码”百宝箱菜单移动到“更多”上

* feat: 系统特性信息支持动态值

* feat: WebDAV插件添加前端资源，并新增获取是否已设置WebDAV密码的接口

* feat: 新增WebDAV配置参考手册说明组件，支持管理员指定WebDAV服务地址

* docs: 补充部分功能文档说明

* fix: 修复部分WebDAV客户端在根资源缺少修改日期时报错的问题

* fix: 修复WebDAV的远程复制与移动目标位置错乱，文件总是被复制到目标位置的上级目录的问题

* fix: 修复判断是否为跨挂载文件系统的逻辑错误；修复不同的挂载文件系统之间复制/移动文件时的路径解析错乱问题

* feat: CopyAndMoveHandler支持配置在复制/移动操作时，是层级递归操作还是一步操作

* feat: 新增webdav-store插件，支持挂载外部第三方的WebDAV服务

* fix: 修复getNodeIdByPathNoEx和getAndMkdirs的事务隔离问题，解决多线程并发保存文件 和 单线程单事务内递归操作的事务隔离导致数据不一致的报错问题

* fix: 修复WebDAV当客户端访问的初始路径为私人网盘时404的问题

* feat: 文件系统支持修改文件的修改日期和创建日期

* feat: 