@@ -1,5 +1,8 @@
 package com.xiaotao.saltedfishcloud.utils;
 
+import com.xiaotao.saltedfishcloud.constant.error.FileSystemError;
+import com.xiaotao.saltedfishcloud.exception.JsonException;
+import com.xiaotao.saltedfishcloud.function.IOExceptionBiConsumer;
 import com.xiaotao.saltedfishcloud.model.DiskFileAttributes;
 import com.xiaotao.saltedfishcloud.model.dto.ResourceRequest;
 import com.xiaotao.saltedfishcloud.model.po.file.FileInfo;
@@ -11,12 +14,8 @@ import java.io.InputStream;
 import java.io.OutputStream;
 import java.nio.file.FileVisitResult;
 import java.nio.file.FileVisitor;
-import java.util.ArrayDeque;
-import java.util.ArrayList;
-import java.util.Deque;
-import java.util.List;
-import java.util.function.BiConsumer;
-import java.util.stream.Collectors;
+import java.util.*;
+import java.util.stream.Stream;
 
 import static com.xiaotao.saltedfishcloud.constant.ByteSize._1KiB;
 
@@ -67,7 +66,7 @@ public class DiskFileSystemUtils {
      * @param path          起始路径
      * @param consumer      消费函数，第一个参数为当前路径，第二个参数为当前路径下的文件项目
      */
-    public static void walk(DiskFileSystem fileSystem, Long uid, String path, BiConsumer<String, List<FileInfo>> consumer) throws IOException {
+    public static void walk(DiskFileSystem fileSystem, Long uid, String path, IOExceptionBiConsumer<String, List<FileInfo>> consumer) throws IOException {
         Deque<String> pathQueue = new ArrayDeque<>();
         pathQueue.add(path);
         do {
@@ -80,7 +79,7 @@ public class DiskFileSystemUtils {
             fileList.addAll(userFileList[0]);
             fileList.addAll(userFileList[1]);
             if (!userFileList[0].isEmpty()) {
-                pathQueue.addAll(userFileList[0].stream().map(e -> StringUtils.appendPath(curPath, e.getName())).collect(Collectors.toList()));
+                pathQueue.addAll(userFileList[0].stream().map(e -> StringUtils.appendPath(curPath, e.getName())).toList());
             }
             consumer.accept(curPath, fileList);
         } while (!pathQueue.isEmpty());
@@ -90,66 +89,74 @@ public class DiskFileSystemUtils {
      * 遍历文件系统
      * @param fileSystem    文件系统
      * @param uid           用户id
-     * @param path          起始路径
+     * @param startPath          起始路径
      * @param visitor       遍历器
      */
-    public static void walk(DiskFileSystem fileSystem, Long uid, String path, FileVisitor<FileInfo> visitor) throws IOException {
+    public static void walk(DiskFileSystem fileSystem, Long uid, String startPath, FileVisitor<FileInfo> visitor) throws IOException {
         Deque<String> pathQueue = new ArrayDeque<>();
-        pathQueue.add(path);
+        pathQueue.add(startPath);
+
+        // 判断传入的路径是否为非目录路径而是文件路径。如果是文件路径则直接触发visitFile回调即可
+        boolean isFile = fileSystem.getResource(uid, startPath, null) != null;
+        if (isFile) {
+            List<FileInfo> l = fileSystem.getUserFileList(uid, PathUtils.getParentPath(startPath), Collections.singletonList(PathUtils.getLastNode(startPath)));
+            if (CollectionUtils.isEmpty(l)) {
+                throw new JsonException(FileSystemError.FILE_NOT_FOUND, startPath);
+            }
+            FileInfo f = l.get(0);
+            f.setPath(startPath);
+            visitor.visitFile(f, DiskFileAttributes.from(f));
+            return;
+        }
+
         do {
             int newSubDirCount = 0;
             String curPath = pathQueue.pop();
             List<FileInfo>[] userFileList = fileSystem.getUserFileList(uid, curPath);
+            List<FileInfo> fileList;
             if (userFileList == null || userFileList.length == 0) {
                 continue;
             }
+            fileList = Stream.concat(userFileList[0].stream(), userFileList[1].stream()).toList();
 
             boolean isSkipSibling = false;
-            for (List<FileInfo> fileList : userFileList) {
+            for (FileInfo file : fileList) {
+                String filePath = StringUtils.appendPath(curPath, file.getName());
+                DiskFileAttributes attr = DiskFileAttributes.from(file);
+                file.setPath(filePath);
+
+                if (file.isDir()) {
+                    FileVisitResult fileVisitResult = visitor.preVisitDirectory(file, attr);
+                    switch (fileVisitResult){
+                        case CONTINUE:
+                            pathQueue.add(filePath);
+                            newSubDirCount++;
+                            break;
+                        case TERMINATE:
+                            return;
+                        case SKIP_SIBLINGS:
+                            isSkipSibling = true;
+                            while (newSubDirCount > 0) {
+                                pathQueue.removeLast();
+                                newSubDirCount--;
+                            }
+                            break;
+                    }
+                }
                 if (isSkipSibling) {
                     break;
                 }
-
-                for (FileInfo file : fileList) {
-                    String filePath = StringUtils.appendPath(curPath, file.getName());
-                    DiskFileAttributes attr = DiskFileAttributes.from(file);
-                    file.setPath(filePath);
-
+                FileVisitResult fileVisitResult;
+                try {
+                    fileVisitResult = visitor.visitFile(file, attr);
                     if (file.isDir()) {
-                        FileVisitResult fileVisitResult = visitor.preVisitDirectory(file, attr);
-                        switch (fileVisitResult){
-                            case CONTINUE:
-                                pathQueue.add(filePath);
-                                newSubDirCount++;
-                                break;
-                            case TERMINATE:
-                                return;
-                            case SKIP_SIBLINGS:
-                                isSkipSibling = true;
-                                while (newSubDirCount > 0) {
-                                    pathQueue.removeLast();
-                                    newSubDirCount--;
-                                }
-                                break;
-                        }
+                        visitor.postVisitDirectory(file, null);
                     }
-                    if (isSkipSibling) {
-                        break;
-                    }
-                    FileVisitResult fileVisitResult;
-                    try {
-                        fileVisitResult = visitor.visitFile(file, attr);
-                        if (file.isDir()) {
-                            visitor.postVisitDirectory(file, null);
-                        }
-                    } catch (IOException e) {
-                        fileVisitResult = visitor.visitFileFailed(file, e);
-                    }
-                    if (fileVisitResult == FileVisitResult.TERMINATE) { return; }
-                    if (fileVisitResult == FileVisitResult.SKIP_SIBLINGS) { break; }
+                } catch (IOException e) {
+                    fileVisitResult = visitor.visitFileFailed(file, e);
                 }
-
-
+                if (fileVisitResult == FileVisitResult.TERMINATE) { return; }
+                if (fileVisitResult == FileVisitResult.SKIP_SIBLINGS) { break; }
             }
         } while (!pathQueue.isEmpty());
     }
